units degrees increment changes are too small #46134

Closed
opened 2015-09-17 05:17:05 +02:00 by martin devlin · 9 comments

windows 7 64, nvidia 760
broken: blender-2.76-testbuild2-win64
worked: blender-2.75a-windows64

in the edge split modifier, changing the split angle, is going up and down in too small an increment,
also create a cube and rotate it in the tool shelf, with the rotate angle
same problem, rotation is in too small an increment, units degrees.

for example

30.01
30.02
30.03

blender 2.75a

30
31
32

windows 7 64, nvidia 760 broken: blender-2.76-testbuild2-win64 worked: blender-2.75a-windows64 in the edge split modifier, changing the split angle, is going up and down in too small an increment, also create a cube and rotate it in the tool shelf, with the rotate angle same problem, rotation is in too small an increment, units degrees. for example 30.01 30.02 30.03 blender 2.75a 30 31 32
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @martinn

Added subscriber: @martinn

Added subscriber: @mont29

Added subscriber: @mont29

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Bastien Montagne self-assigned this 2015-09-17 07:55:53 +02:00

Thanks for the report, but no bug here, this is expected behavior. No reason to snap angles to 1 degree by default, this prevents any fine tuning with the mouse. Note you can still snap to one degree by holding ctrl + shift…

Thanks for the report, but no bug here, this is expected behavior. No reason to snap angles to 1 degree by default, this prevents any fine tuning with the mouse. Note you can still snap to one degree by holding ctrl + shift…

This issue was referenced by c4bcb6a479

This issue was referenced by c4bcb6a479c0a416fc66204b95017436bc0e2975

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'

Added subscriber: @ideasman42

Added subscriber: @ideasman42

@mont29, committed fix for this.

There was a bug- that the 'step' was being completely ignored.

With the fix, you can still get 100th's of a degree by holding shift.

@mont29, committed fix for this. There was a bug- that the 'step' was being completely ignored. With the fix, you can still get 100th's of a degree by holding shift.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46134
No description provided.